--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:layout_gravity="center"
+    android:background="@android:color/transparent"
     android:orientation="vertical">
 
     <ProgressBar
