--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,4 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.AdminActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView3"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/admin_nav"
+        android:layout_above="@+id/adminBottomNavigation"
+        />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/adminBottomNavigation"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/admin_menu_navigation"
+        app:itemTextColor="@color/color_navigation"
+        app:itemIconTint="@color/color_navigation_icon"
+        android:background="@color/navigation_bg_color"
+        app:labelVisibilityMode="labeled"
+        android:outlineAmbientShadowColor="@color/navigation_checked_color"
+        app:itemActiveIndicatorStyle="@style/BottomNavigationViewCustom"
+        />
+
+</RelativeLayout>
