--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
+        android:layout_above="@id/cusBottomNavigation"
         app:navGraph="@navigation/cus_nav" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
