--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -8,8 +8,9 @@
     tools:context=".ui.common.signIn.SignInFragment">
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:id="@+id/logo"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/login_logo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +30,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/logo" />
 
     <TextView
         android:id="@+id/textView2"
@@ -66,7 +67,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtUsername"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:backgroundTint="@color/white"
             android:hint="Tên đăng nhập"
             android:gravity="center_vertical"/>
@@ -93,16 +94,16 @@
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/txtPassword"
         android:layout_width="match_parent"
+        android:layout_height="70dp"
         android:inputType="textPassword"
         android:backgroundTint="@color/white"
-        android:layout_height="wrap_content"
         android:hint="Mật khẩu" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#AB040404"
@@ -124,6 +125,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/forgetpassword"
         android:textStyle="italic"
+        android:textSize="15dp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,25 +135,27 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginBottom="24dp"
         android:text="Thành viên mới?"
+        android:textSize="15dp"
         android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.338"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginBottom="24dp"
         android:text="Đăng ký tại đây"
+        android:textSize="15dp"
         android:textColor="@color/black"
         android:textStyle="italic|bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.072"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toEndOf="@+id/textView3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
