--- a/app/src/main/res/layout/row_item_chat_message.xml
+++ b/app/src/main/res/layout/row_item_chat_message.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:leftBackGroundColor="@android:color/holo_blue_dark"
-        app:startDirection="true"
+        app:rightBackGroundColor="@color/i_blue"
+        app:startDirection="false"
         app:messageContent="Test"
         android:id="@+id/chatMessage"
         />
