--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -38,16 +38,17 @@
         app:layout_constraintHorizontal_bias="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.2"
+        tools:ignore="TextSizeCheck" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilEmail"
-        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:paddingHorizontal="40dp"
+        android:layout_marginHorizontal="30dp"
         app:boxBackgroundMode="outline"
+        app:boxBackgroundColor="@color/black"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
@@ -60,8 +61,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtEmail"
             android:layout_width="match_parent"
-
             android:layout_height="60dp"
+            android:textColor="@color/black"
             android:backgroundTint="@color/white"
             android:inputType="textEmailAddress"
             android:gravity="center_vertical"
@@ -70,12 +71,12 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilPhone"
-        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:paddingHorizontal="40dp"
+        android:layout_marginHorizontal="30dp"
         app:boxBackgroundMode="outline"
+        app:boxBackgroundColor="@color/black"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
@@ -89,6 +90,7 @@
             android:id="@+id/txtPhone"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:textColor="@color/black"
             android:backgroundTint="@color/white"
             android:gravity="center_vertical"
             android:inputType="phone"
@@ -97,12 +99,12 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilSignInPassword"
-        style="@style/Widget.Material3.TextInputLayout.FilledBox"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:paddingHorizontal="40dp"
+        android:layout_marginHorizontal="30dp"
         app:boxBackgroundMode="outline"
+        app:boxBackgroundColor="@color/black"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
@@ -117,6 +119,7 @@
             android:id="@+id/txtPassword"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:textColor="@color/black"
             android:backgroundTint="@color/white"
             android:hint="Mật khẩu"
             android:inputType="textPassword" />
@@ -124,12 +127,12 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilSignInPasswordConfirm"
-        style="@style/Widget.Material3.TextInputLayout.FilledBox"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:paddingHorizontal="40dp"
+        android:layout_marginHorizontal="30dp"
         app:boxBackgroundMode="outline"
+        app:boxBackgroundColor="@color/black"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
@@ -144,6 +147,7 @@
             android:id="@+id/txtPasswordConfirm"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:textColor="@color/black"
             android:backgroundTint="@color/white"
             android:hint="Nhập lại mật khẩu"
             android:inputType="textPassword" />
@@ -174,12 +178,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:text="Đã có tài khoản?"
-        android:textSize="15dp"
         android:textColor="@color/black"
+        android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.338"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/btnGoSignIn"
@@ -187,12 +192,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:text="Đăng nhập tại đây"
-        android:textSize="15dp"
         android:textColor="@color/black"
+        android:textSize="15dp"
         android:textStyle="italic|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.072"
-        app:layout_constraintStart_toEndOf="@+id/textView3" />
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        tools:ignore="TextSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
