update display load list chat to ui + fix base adapter

--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -22,6 +22,7 @@
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
+       android:id="@+id/rvChatList"
        android:layout_below="@+id/llChatListHeader"/>
 
 </RelativeLayout>
