--- a/app/src/main/res/navigation/cus_nav.xml
+++ b/app/src/main/res/navigation/cus_nav.xml
@@ -36,6 +36,9 @@
         <action
             android:id="@+id/action_navigation_cus_profile_to_orderListFragment2"
             app:destination="@id/orderListFragment2" />
+        <action
+            android:id="@+id/action_navigation_cus_profile_to_update_profile"
+            app:destination="@id/update_profile" />
     </fragment>
     <fragment
         android:id="@+id/bookDetailsFragment2"
@@ -78,5 +81,14 @@
         <action
             android:id="@+id/action_navigation_category_to_bookDetailsFragment2"
             app:destination="@id/bookDetailsFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/update_profile"
+        android:name="com.group2.bookstoreproject.ui.customer.profile.UpdateProfileFragment"
+        android:label="fragment_update_profile"
+        tools:layout="@layout/fragment_update_profile" >
+        <action
+            android:id="@+id/action_update_profile_to_navigation_cus_profile"
+            app:destination="@id/navigation_cus_profile" />
     </fragment>
 </navigation>
