--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,6 +9,7 @@
         <attr name="showEndIcon" format="boolean"/>
         <attr name="showStartText" format="boolean"/>
         <attr name="showShadow" format="boolean"/>
+        <attr name="titleStart" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="CustomChatMessage">
