--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorAccent">#FF4500</color>
     <color name="textColorPrimary">#000000</color>
     <color name="textColorSecondary">#FFFFFF</color>
+    <color name="strokeGray">#f2f2f2</color>
 
     <color name="navigation_color">#8D8D8D</color>
     <color name="navigation_bg_color">#FFF</color>
