update chat nav + loading state

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -21,6 +21,8 @@
             android:title="Name"
             app:showShadow="true"
             app:textStart="Quay lại"
+            app:showStartText="false"
+            app:showStartIcon="false"
             />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvChatMessages"
